[project]
name = "asg-vlm"
version = "0.1.0"
description = "KiCad 原理图布局 DSL 两阶段 SFT(ms-swift)"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = []

[dependency-groups]
# 服务器训练环境:uv sync --group train
# deepspeed / flash-attn 编译期要 import torch,不能进这里,见 scripts/setup_env.sh
train = [
    "torch==2.7.*",
    "ms-swift>=3.6",
    "modelscope>=1.23",
    "hydra-core>=1.3",
    "mlflow",
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cu128", marker = "sys_platform == 'linux'" }]
